# devmemo

./: .gitignore  .venv  README.md  pyproject.toml
src/devmemo/: cli.py  mcp_server.py  service.py
src/devmemo/agents/: models.py  summarize.jinja
src/devmemo/storage/: models.py  service.py
