[project]
name = "devmemo"
version = "0.1.0"
description = "A tool to help record and maintain software project information"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "click>=8.0.0",  # for CLI interface
]

[project.scripts]
devmemo = "devmemo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devmemo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
